--- a/codenamesCss.css
+++ b/codenamesCss.css
@@ -1,23 +1,38 @@
 .mainGrid {
-    display: grid;
     border: 2px solid black;
-    grid-template: "a b c d e"
-                   "f g h i j"
-                   "k l m n o";
-    grid-row-gap: 1px;
-    grid-column-gap: 1px;
     background-color: black;
-    width:50%;
-    height:auto;
-    margin:auto;
-    margin-top: 100px;
+    width: 100%;
+    height:750px;
+    margin-top:100px;
+}
+
+.gridRow {
+    display:block;
+    width:100%;
+    height:18.7%;
+    background-color: black;
+    margin-left:1px;
 }
 
 .gridItem {
+    float:left;
+    display:block;
     background-color: white;
+    margin-left:1px;
+    margin-right:2px;
+    margin-top:1px;
+    margin-bottom: 1px;
+    padding:5px;
+    padding-top: 3px;
+    width: 19%;
+    height: 100%;
+}
+
+p {
+    display: block;
+    vertical-align: middle;
     text-align: center;
-    width:100%;
-    padding-top:20px;
-    padding-bottom: 20px;
-    font-size: x-large;
+    font-size: 17px;
+    margin:1px;
+    margin-top: 5px;
 }
